assets/section-product-grid.css
.product-grid__header {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.product-grid__header h3 {
    background-color: var(--color-primary);
    padding: 8px 20px;
    rotate: 1deg;
    width: fit-content;
    text-align: center;
    color: var(--color-neutral-6);
    font-family: var(--font-family-title);
    font-weight: 600;
    font-size: var(--font-size-h2);
    line-height: var(--line-height);
    margin: 12px 0;
}

.product-grid .wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.product-grid-container:not(.product-grid-container--index) .product-grid .wrapper {
    padding-top: 40px;
    padding-bottom: 40px;
}

.product-grid .button {
    margin-top: 52px;
}

.product-grid__header p {
    font-size: var(--font-size-m);
    line-height: var(--line-height-xl);
    color: var(--color-neutral-2);
    font-family: var(--font-family-title);
    font-weight: 500;
    text-align: center;
}

.product-grid-container--index .product-grid__items {
    margin-top: 48px;
}

.product-grid__items {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(280px, 308px));
    gap: 16px;
    width: 100%;
}

.product-grid .pagination-bullets {
    position: static;
    margin-top: 28px;
    transform: none;
}

@media (min-width: 821px) {
    .product-grid .pagination-bullets {
        display: none;
    }
}

.product-grid .pagination-bullet {
    border-color: var(--color-primary);
}

.product-grid .pagination-bullet.is-active {
    background-color: var(--color-primary);
}

.product-grid .pagination-bullet:focus-visible {
    outline-color: var(--color-primary);
}

.product-grid-container {
    background: linear-gradient(180deg, #eafafb -1.73%, rgba(255, 255, 255, 0) 104.91%);
}

.product-grid-container--index {
    background: var(--color-neutral-6) !important;
}

.product-grid-container > .subscription-banner__wave {
    width: 100%;
    fill: var(--color-complementary-1);
    position: relative;
    bottom: 14px;
    z-index: 1000;
}

@media (max-width: 820px) {
    .product-grid .wrapper {
        box-sizing: border-box;
        max-width: 100%;
        overflow: hidden;
    }

    .product-grid__item {
        max-width: 100%;
        min-width: 0;
        overflow: hidden;
    }

    .product-grid__items {
        grid-template-columns: 1fr;
        justify-content: center;
        min-width: 0;
        overflow: hidden;
    }

    .product-grid-container--index .product-grid[data-slider] .product-grid__item:not(.is-active) {
        display: none;
    }

    .product-grid .pagination-bullets {
        display: flex;
    }

    .product-grid .button {
        margin-top: 28px !important;
    }
}

